--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   xml: "^3.0.0"
   http: "^0.11.3+16"
   html: "^0.13.3"
+  html_unescape: "^1.0.0"
+  flutter_html_view: "^0.4.0"
   path_provider: "^0.4.0"
 
 dev_dependencies:
