--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   html_unescape: "^1.0.0"
   flutter_html_view: "^0.4.0"
   path_provider: "^0.4.0"
+  intl: any
 
 dev_dependencies:
   flutter_test:
