--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_html_view: "^0.4.0"
   path_provider: "^0.4.0"
   intl: any
+  url_launcher: "^3.0.1"
 
 dev_dependencies:
   flutter_test:
