--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,21 +35,21 @@ flutter:
   uses-material-design: true
 
   fonts:
-      - family: Ubuntu
-        fonts:
-          - asset: fonts/Ubuntu-Bold.ttf
-            weight: 700
-  #   - family: Open Sans
-  #     fonts:
-  #       - asset: fonts/OpenSans-Regular.ttf
-  #       - asset: fonts/OpenSans-Bold.ttf
-  #         weight: 700
-  #       - asset: fonts/OpenSans-Italic.ttf
-  #         style: italic
-  #       - asset: fonts/OpenSans-Light.ttf
-  #         weight: 300
-  #       - asset: fonts/OpenSans-SemiBold.ttf
-  #         weight: 500
+    - family: Ubuntu
+      fonts:
+        - asset: fonts/Ubuntu-Bold.ttf
+          weight: 700
+    - family: Open Sans
+      fonts:
+        - asset: fonts/OpenSans-Regular.ttf
+        - asset: fonts/OpenSans-Bold.ttf
+          weight: 700
+        - asset: fonts/OpenSans-Italic.ttf
+          style: italic
+        - asset: fonts/OpenSans-Light.ttf
+          weight: 300
+        - asset: fonts/OpenSans-SemiBold.ttf
+          weight: 500
 
 
   # To add assets to your application, add an assets section, like this:
