--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,12 @@ dependencies:
   html: "^0.13.3"
   html_unescape: "^1.0.0"
   flutter_html_view: "^0.4.0"
-  path_provider: "^0.4.0"
+
   intl: any
   url_launcher: "^3.0.1"
+  datetime_picker_formfield: "^0.0.3"
+  simple_autocomplete_formfield: "^0.0.2"
+  network_resource: "^0.0.2"
 
 dev_dependencies:
   flutter_test:
