--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   datetime_picker_formfield: "^0.0.3"
   simple_autocomplete_formfield: "^0.0.2"
   network_resource: "^0.0.2"
+  english_words: "^3.1.0"
+  crypto: "^2.0.3"
 
 dev_dependencies:
   flutter_test:
