Added (unnecessary) dev/prod targets. Not currently being used.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Flutter",
+      "name": "development",
+      "program": "lib/main_dev.dart",
+      "request": "launch",
+      "type": "dart"
+    },
+    {
+      "name": "production",
+      "program": "lib/main_prod.dart",
       "request": "launch",
       "type": "dart"
     }
