--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "development",
-      "program": "lib/main_dev.dart",
+      "name": "mobile development",
+      "program": "toledotechevents_mobile/lib/main_dev.dart",
       "request": "launch",
       "type": "dart"
     },
     {
-      "name": "production",
-      "program": "lib/main_prod.dart",
+      "name": "mobile production",
+      "program": "toledotechevents_mobile/lib/main_prod.dart",
       "request": "launch",
       "type": "dart"
     }
