--- a/toledotechevents_mobile/pubspec.yaml
+++ b/toledotechevents_mobile/pubspec.yaml
@@ -1,4 +1,4 @@
-name: toledotechevents
+name: toledotechevents_mobile
 description: ToledoTechEvents.org's companion app.
 
 dependencies:
@@ -9,26 +9,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
 
-  xml: ^3.0.0
-  http: ^0.11.3+16
-  html: ^0.13.3
-  html_unescape: ^1.0.0
+
   flutter_html_view: ^0.4.0
 
-  intl: any
   url_launcher: ^3.0.1
   datetime_picker_formfield: ^0.1.1
   simple_autocomplete_formfield: ^0.1.1
   network_resource: ^0.2.4
-  english_words: ^3.1.0
-  crypto: ^2.0.3
+  # toledotechevents:
+  #   path: ../toledotechevents
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 environment:
-  sdk: ">=1.19.0 <3.0.0"
+  sdk: ">=1.20.1 <3.0.0"
   flutter: ">=0.1.2 <2.0.0"
 
 
