--- a/toledotechevents/pubspec.yaml
+++ b/toledotechevents/pubspec.yaml
@@ -4,14 +4,12 @@ version: 0.0.1
 author: Jacob Phillips <jifalops@gmail.com>
 homepage: https://github.com/jifalops/toledotechevents
 
-environment:
-  sdk: '>=1.20.1 <3.0.0'
+# environment:
+#   sdk: '>=1.20.1 <3.0.0'
 
 dependencies:
   rxdart: ^0.18.1
-  json_serializable: ^0.5.8+1
-  json_annotation: ^0.2.9+1
-  http: ^0.11.3+17
+  http: ^0.11.3+16
   english_words: ^3.1.0
   crypto: ^2.0.3
   xml: ^3.0.0
