--- a/toledotechevents_mobile/pubspec.yaml
+++ b/toledotechevents_mobile/pubspec.yaml
@@ -16,17 +16,17 @@ dependencies:
   datetime_picker_formfield: ^0.1.1
   simple_autocomplete_formfield: ^0.1.1
   network_resource: ^0.2.4
-  # toledotechevents:
-  #   path: ../toledotechevents
+  toledotechevents:
+    path: ../toledotechevents
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-environment:
-  sdk: ">=1.20.1 <3.0.0"
-  flutter: ">=0.1.2 <2.0.0"
+# environment:
+#   sdk: ">=1.20.1 <3.0.0"
+#   flutter: ">=0.1.2 <2.0.0"
 
 
 # For information on the generic Dart part of this file, see the
