--- a/toledotechevents_mobile/pubspec.yaml
+++ b/toledotechevents_mobile/pubspec.yaml
@@ -28,10 +28,6 @@ dev_dependencies:
 #   sdk: ">=1.20.1 <3.0.0"
 #   flutter: ">=0.1.2 <2.0.0"
 
-
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -43,51 +39,19 @@ flutter:
   fonts:
     - family: Ubuntu
       fonts:
-        - asset: fonts/Ubuntu-Regular.ttf
-        - asset: fonts/Ubuntu-Bold.ttf
+        - asset: ../fonts/Ubuntu-Regular.ttf
+        - asset: ../fonts/Ubuntu-Bold.ttf
           weight: 700
-        - asset: fonts/Ubuntu-Light.ttf
+        - asset: ../fonts/Ubuntu-Light.ttf
           weight: 300
     - family: Open Sans
       fonts:
-        - asset: fonts/OpenSans-Regular.ttf
-        - asset: fonts/OpenSans-Bold.ttf
+        - asset: ../fonts/OpenSans-Regular.ttf
+        - asset: ../fonts/OpenSans-Bold.ttf
           weight: 700
-        - asset: fonts/OpenSans-Italic.ttf
+        - asset: ../fonts/OpenSans-Italic.ttf
           style: italic
-        - asset: fonts/OpenSans-Light.ttf
+        - asset: ../fonts/OpenSans-Light.ttf
           weight: 300
-        - asset: fonts/OpenSans-SemiBold.ttf
+        - asset: ../fonts/OpenSans-SemiBold.ttf
           weight: 500
-
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.io/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.io/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.io/custom-fonts/#from-packages
