--- a/toledotechevents_mobile/pubspec.yaml
+++ b/toledotechevents_mobile/pubspec.yaml
@@ -10,23 +10,23 @@ dependencies:
   cupertino_icons: ^0.1.0
 
 
-  flutter_html_view: ^0.4.0
+  flutter_html_view: ^0.5.0
 
   url_launcher: ^3.0.1
   datetime_picker_formfield: ^0.1.2
   simple_autocomplete_formfield: ^0.1.1
-  async_resource: ^0.0.3
   toledotechevents:
     path: ../toledotechevents
   shared_preferences: ^0.4.2
+  path_provider: ^0.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# environment:
-#   sdk: ">=1.20.1 <3.0.0"
-#   flutter: ">=0.1.2 <2.0.0"
+environment:
+  sdk: ">=1.20.1 <3.0.0"
+  flutter: ">=0.1.2 <2.0.0"
 
 # The following section is specific to Flutter.
 flutter:
