--- a/toledotechevents/pubspec.yaml
+++ b/toledotechevents/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.0.1
 author: Jacob Phillips <jifalops@gmail.com>
 homepage: https://github.com/jifalops/toledotechevents
 
-# environment:
-#   sdk: '>=1.20.1 <3.0.0'
+environment:
+  sdk: '>=2.0.0-dev.69.5 <3.0.0'
 
 dependencies:
   rxdart: ^0.18.1
