--- a/toledotechevents_mobile/pubspec.yaml
+++ b/toledotechevents_mobile/pubspec.yaml
@@ -25,7 +25,7 @@ dev_dependencies:
     sdk: flutter
 
 environment:
-  sdk: ">=1.20.1 <3.0.0"
+  sdk: ">=2.0.0-dev.69.5 <3.0.0"
   flutter: ">=0.1.2 <2.0.0"
 
 # The following section is specific to Flutter.
