--- a/toledotechevents_web/pubspec.yaml
+++ b/toledotechevents_web/pubspec.yaml
@@ -1,18 +1,19 @@
 name: toledotechevents_web
 description: A web app that uses AngularDart Components
-# version: 1.0.0
-# homepage: https://www.example.com
-# author: Jacob Phillips <email@example.com>
+version: 1.0.0
+homepage: https://www.example.com
+author: Jacob Phillips <email@example.com>
 
 environment:
-  sdk: '>=2.0.0-dev.68.0 <3.0.0'
+  sdk: '>=2.0.0-dev.69.5 <3.0.0'
 
 dependencies:
   angular: ^5.0.0-beta
   angular_components: ^0.9.0-beta
-#  toledotechevents:
-#    path: ../toledotechevents
-  pwa: ^0.1.10
+  toledotechevents:
+    path: ../toledotechevents
+  pwa:
+    git: https://github.com/jifalops/pwa
 
 dev_dependencies:
   angular_test: ^2.0.0-beta
