made splash optional; web wip

--- a/toledotechevents_web/pubspec.yaml
+++ b/toledotechevents_web/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   angular: ^5.0.0-beta
   angular_components: ^0.9.0-beta
+  sass_builder: ^2.1.1
   toledotechevents:
     path: ../toledotechevents
   pwa:
