--- a/web/pubspec.yaml
+++ b/web/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   angular_components: ^0.9.0-beta
   sass_builder: ^2.1.1
   toledotechevents:
-    path: ../toledotechevents
+    path: ../base
   pwa:
     git: https://github.com/jifalops/pwa
 
