--- a/web/pubspec.yaml
+++ b/web/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   angular: ^5.0.0-beta
   angular_components: ^0.9.0-beta
-  sass_builder: ^2.1.1
+  bootstrap_sass: ^4.1.2
   toledotechevents:
     path: ../base
   pwa:
@@ -18,6 +18,7 @@ dependencies:
 
 dev_dependencies:
   angular_test: ^2.0.0-beta
+  sass_builder: ^2.1.1
   build_runner: ^0.9.0
   build_test: ^0.10.2
   build_web_compilers: ^0.4.0
