--- a/base/pubspec.yaml
+++ b/base/pubspec.yaml
@@ -17,7 +17,10 @@ dependencies:
   html_unescape: ^1.0.0
   intl: any
   meta: any
-  async_resource: ^0.1.0
+  async_resource: ^0.1.2
+  display: ^0.0.2
+  color_rgb_a: ^0.0.1
+
 
 
 dev_dependencies:
