--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,24 +38,24 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+    - packages/toledotechevents/assets/images/
 
   fonts:
     - family: Ubuntu
       fonts:
-        - asset: assets/fonts/Ubuntu-Regular.ttf
-        - asset: assets/fonts/Ubuntu-Bold.ttf
+        - asset: packages/toledotechevents/assets/fonts/Ubuntu-Regular.ttf
+        - asset: packages/toledotechevents/assets/fonts/Ubuntu-Bold.ttf
           weight: 700
-        - asset: assets/fonts/Ubuntu-Light.ttf
+        - asset: packages/toledotechevents/assets/fonts/Ubuntu-Light.ttf
           weight: 300
     - family: Open Sans
       fonts:
-        - asset: assets/fonts/OpenSans-Regular.ttf
-        - asset: assets/fonts/OpenSans-Bold.ttf
+        - asset: packages/toledotechevents/assets/fonts/OpenSans-Regular.ttf
+        - asset: packages/toledotechevents/assets/fonts/OpenSans-Bold.ttf
           weight: 700
-        - asset: assets/fonts/OpenSans-Italic.ttf
+        - asset: packages/toledotechevents/assets/fonts/OpenSans-Italic.ttf
           style: italic
-        - asset: assets/fonts/OpenSans-Light.ttf
+        - asset: packages/toledotechevents/assets/fonts/OpenSans-Light.ttf
           weight: 300
-        - asset: assets/fonts/OpenSans-SemiBold.ttf
+        - asset: packages/toledotechevents/assets/fonts/OpenSans-SemiBold.ttf
           weight: 500
